# tfm-FLwithCopies

./: .gitignore  README.md  ennvironment.yaml  environment.yaml
quickstart-pytorch_changesXI/: pyproject.toml
quickstart-pytorch_changesXI/pytorchexample_changesXI/: client_app.py  custom_strategy.py  evaluation_metrics.py  get_original_data.py  plot_metrics_evol.py  plot_models_db.py  server_app.py
quickstart-pytorch_changesXIII/: pyproject.toml
quickstart-pytorch_changesXIII/pytorchexample_changesXIII/: client_app.py  custom_strategy.py  evaluation_metrics.py  get_original_data.py  server_app.py  task.py
quickstart-pytorch_expA/: pyproject.toml
quickstart-pytorch_expA/pytorchexample_expA/: client_app.py  custom_strategy.py  data_clients.csv  data_evalmetrics_fi.csv  data_evalmetrics_te.csv  get_synthetic_data.py  server_app.py  task.py
quickstart-pytorch_expB/: pyproject.toml
quickstart-pytorch_expB/pytorchexample_expB/: client_app.py  custom_strategy.py  get_synthetic_data.py  plot_metrics_evol.py  server_app.py
